apps/staging/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: pihole
spec:
  ingressClassName: traefik
  rules:
    - host: pihole.cluster-k3s.internal
      http:
        paths:
          - backend:
              service:
                name: pihole-service-web
                port:
                  number: 80
            path: /
            pathType: Prefix
